# log_parser

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.claude/: settings.local.json
.xm/op/: debate-2026-05-06-phase-b-readiness.json
.xm/probe/: last-verdict.json
.xm/review/: last-result.md
config/: .env.example  README.md  agent.yaml  agent_docker.yaml  agent_test.yaml  categories.yaml  fields.yaml  vector.toml
docs/: 1_observability-design.md  2_MASTER_PLAN.md  3_AGENT_ROLES.md  3_PHASE_B.md  4_RECEIVER_CONTRACT.md  5_TEST_RECEIVER.md  6_REFACTOR.md  6_SCALE_CONTRACT.md  7_PULL_API.md  IMPL_NOTES.md  README.md  RECEIVER_TYPE_SPEC.md  agent-roles.md  impl-notes.md  install.md  master-plan.md  observability-design.md  phase-b.md  pipeline.md  pull-api.md  receiver-contract.md  scale-contract.md  test-receiver.md
examples/: README.md  envelope-response.00.example  loadtest_receiver.py  normalizer-dedup.00.example  receiver_example.py  sos-report-response.00.example  stat-report-response.00.example
reference/stack/: README.md  goldset.yaml  playbook.yaml
src/: README.md  config.rs  envelope.rs  lib.rs  main.rs  process.rs
src/coordinator/: README.md  cycle.rs  mod.rs
src/dedup/: README.md  window.rs
src/inbound/: README.md  collect.rs  drain.rs  flush.rs  mod.rs  raw.rs  sos.rs  stat.rs
src/normalize/: README.md  categories.rs  fields.rs  mod.rs  severity.rs  tokens.rs
test_server/: .env.example  README.md  docker-compose.yml
tests/: README.md  error_cases.yaml  inject_errors.sh
(+26 files in other folders)
