[package]
name = "log_parser"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "log_parser"
path = "src/main.rs"

[dependencies]
# async runtime
tokio = { version = "1", features = ["full"] }

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# HTTP server: inbound /flush (127.0.0.1:9100)
axum = "0.7"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["limit"] }

# HTTP client: HttpJsonTransport (kind="http_json", Phase B 테스트용)
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "rustls-tls"] }

# gzip: inbound /flush 응답 압축
flate2 = "1"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# fingerprint hashing (dedup)
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# LRU cache (dedup window)
lru = "0.12"

# timestamps
chrono = { version = "0.4", features = ["serde"] }

# ULID (spool file naming — time-sortable unique ID)
ulid = "1"

# error handling
thiserror = "1"
anyhow = "1"

# hostname detection
hostname = "0.4"

# regex / pattern matching
regex = "1"
once_cell = "1"

# constant-time byte comparison (타이밍 오라클 방지)
subtle = "2"

[dev-dependencies]
# tokio time-control in tests (start_paused = true, advance)
tokio = { version = "1", features = ["test-util"] }
